--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "utils/git-archive-all"]
+	path = utils/git-archive-all
+	url = https://github.com/hank/git-archive-all.git
