--- a/.gitmodules
+++ b/.gitmodules
@@ -40,9 +40,6 @@
 [submodule "bundle/bbye"]
 	path = bundle/bbye
 	url = https://github.com/qiushihe/vim-bbye.git
-[submodule "bundle/tagbar"]
-	path = bundle/tagbar
-	url = https://github.com/majutsushi/tagbar
 [submodule "bundle/vim-airline-themes"]
 	path = bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
@@ -61,3 +58,6 @@
 [submodule "bundle/fake"]
 	path = bundle/fake
 	url = https://github.com/tkhren/vim-fake.git
+[submodule "bundle/showmarks"]
+	path = bundle/showmarks
+	url = https://github.com/bootleq/ShowMarks.git
